@@ -2396,6 +2396,10 @@ Wed, 26 Nov 2008 14:09:08 +0100
 	- When creating a varchar struct name braces must be discarded.
 	- Applied patch by Ron Mayer <rm_pg@cheapcomplexdevices.com> to merge
 	  the new interval style into ecpg.
+
+Mon, 15 Dec 2008 16:31:31 +0100
+
+	- Do not try to change a const variable in ecpg_log.
 	- Set pgtypes library version to 3.1.
 	- Set compat library version to 3.1.
 	- Set ecpg library version to 6.2.
